# chroma-notes

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh  start.sh
.github/workflows/: docker.yml
scripts/: download_models.py
src/chroma_notes/: cli.py  colors.py  modal_omr.py  omr.py  overlay.py  pipeline.py
web/: app.py
web/static/: index.html
