[project]
name = "chroma-notes"
version = "0.1.0"
description = "Color-code sheet music notes in PDFs using Boomwhacker colors"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24",
    "oemer",
    "opencv-python-headless>=4.8",
    "click>=8.1",
]

[project.scripts]
chroma-notes = "chroma_notes.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chroma_notes"]
