[project]
name = "chroma-notes"
version = "0.1.0"
description = "Color-code sheet music notes in PDFs using Boomwhacker colors"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24",
    "oemer",
    "opencv-python-headless>=4.8",
    "click>=8.1",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "modal",
]

[dependency-groups]
gpu = [
    "nvidia-cublas-cu12>=12.9.2.10",
    "nvidia-cuda-runtime-cu12>=12.9.79",
    "nvidia-cudnn-cu12>=9.22.0.52",
    "nvidia-cufft-cu12>=11.4.1.4",
]

[project.scripts]
chroma-notes = "chroma_notes.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chroma_notes"]
